syntax = "proto3";

package pb;

option go_package = "github.com/codepnw/simple-bank/pb";

import "google/protobuf/timestamp.proto";

message CreateTransferRequest {
    int64 from_account_id = 1;
    int64 to_account_id = 2;
    int64 amount = 3;
    string currency = 4;
}

message Account {
    int64 id = 1;
    int64 owner_id = 2;
    int64 balance = 3;
    string currency = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message Transfer {
    int64 id = 1;
    int64 from_account_id = 2;
    int64 to_account_id = 3;
    int64 amount = 4;
    google.protobuf.Timestamp created_at = 5;
}

message Entry {
    int64 id = 1;
    int64 account_id = 2;
    int64 amount = 3;
    google.protobuf.Timestamp created_at = 4;
}

message CreateTransferResponse {
    Transfer transfer = 1;
    Account from_account = 2;
    Account to_account = 3;
    Entry from_entry = 4;
    Entry to_entry = 5;
}

service SimpleBank {
    rpc CreateTransfer (CreateTransferRequest) returns (CreateTransferResponse) {}
}
